--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,126 @@
 .App {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 30px;
 }
 
 .todoList {
-    margin: 0 auto;
-    width: 300px;
-}
+  margin-top: 10px;
+  height: 88vh;
 
-.todoList > div {
-    padding: 10px;
-}
+  display: flex;
+  flex-direction: column;
 
-.todoList-task.done {
-    opacity: 0.5;
-}
+  width: 100%;
+  max-width: 300px;
 
-.filter-active {
-    background-color: springgreen;
-}
+  background-color: #313131;
 
-.error {
-    border-color: red;
+  padding: 15px;
 }
 
 .todoList-header {
-    display: flex;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px 25px;
+  background-color: #F3F3F3;
+  margin-bottom: 15px;
 }
+
+.todoList-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todoList-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 25px;
+  background-color: #F3F3F3;
+  margin-bottom: 15px;
+}
+
+.todoList-task {
+  display: flex;
+  justify-content: space-between;
+
+  padding: 15px 25px;
+  background-color: #F3F3F3;
+
+  cursor: pointer;
+  margin-bottom: 15px;
+}
+
+.todoList-task > div {
+  display: flex;
+  align-items: center;
+}
+
+.todoList-task.done {
+  opacity: 0.5;
+}
+
+.filter-active {
+  background-color: springgreen;
+}
+
 
 .todoList-header > button {
-    height: 30px;
-    width: 30px;
+  height: 30px;
+  width: 30px;
 }
 
-.todoList-header__title {
-    font-size: 28px;
-    font-weight: bold;
+.todoList-footer {
+  margin-top: auto;
+}
+
+.delete-button {
+  width: 30px;
+  height: 30px;
+}
+
+.preloader {
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.button {
+  background-color: #313131;
+  border: none;
+  color: white;
+  padding: 11px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 80px;
+}
+
+.newItemForm-input {
+  background-color: #313131;
+  border: none;
+  color: white;
+  padding: 15px 18px;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  width: 131px;
+}
+
+.error {
+  cursor: not-allowed;
+}
+
+.todoList-newItemForm {
+  display: flex;
+  height: 50px;
 }
